# tinymonitor

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  build.sh  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  tinymonitor.spec  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  docs.yml  release.yml  security.yml
cmd/: config.example.toml  info.go  service.go  test_alert.go  uninstall.go  update.go  validate.go  version.go
cmd/tinymonitor/: main.go
configs/: config.example.toml
docs/: configuration.md  development.md  index.md  installation.md
docs/alerts/: google_chat.md  gotify.md  index.md  ntfy.md  smtp.md  webhook.md
docs/commands/: completion.md  index.md  info.md  run.md  service.md  test-alert.md  uninstall.md  update.md  validate.md  version.md
docs/getting-started/: first-config.md  index.md  installation.md
docs/guides/: launchd.md  systemd.md  troubleshooting.md
docs/metrics/: cpu.md  filesystem.md  index.md  io.md  load.md  memory.md  reboot.md
install/: install.sh
internal/alerts/: google_chat.go  gotify.go  manager.go  ntfy.go  provider.go  smtp.go  webhook.go
internal/config/: config.go  config_test.go
internal/metrics/: cpu.go  io.go  load.go  metrics_test.go  reboot.go
internal/models/: types.go
internal/monitor/: monitor.go  monitor_test.go
internal/system/: service.go  uninstall.go  update.go
internal/utils/: system_info.go
src/tinymonitor/: __main__.py  config.py  monitor.py
tests/: test_monitor_logic.py
tinymonitor-go/: .gitignore  go.mod
(+31 files in other folders)
