[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinymonitor"
version = "0.1.0"
description = "A lightweight system monitor with alerting capabilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil",
    "requests",
]

[project.scripts]
tinymonitor = "tinymonitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
